[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
rand = "0.3"
failure = "0.1.1"
hmac = "0.11.0"
sha2 = "0.9"
#uuid = { version = "0.6.5", features = ["v4"] }
defer-lite = "1.0.0"
#openh264 = "0.3.0"

bytesio = "0.1.27"#{path = "../../library/bytesio/"}
xflv = "0.0.3"#{path = "../../library/container/flv/"}
rtmp = {path = "../protocol/rtmp/"}

tokio-util = { version = "0.6.5", features = ["codec"] }
log = "0.4"
chrono = "0.4"

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]