[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1.4.7", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
#env_logger = "0.9.0"
log4rs = "1.2.0"
log = "0.4.17"
uuid = { version = "0.6.5", features = ["v4"] }
#rtmp = "0.0.14"#
rtmp = {path = "../protocol/rtmp/"}
client = {path = "../client/"}


[dependencies.tokio]
version = "1.21.2"
default-features = false
features = ["full"]